--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clean-cache",
   "version": "1.0.2",
   "description": "Simple single-file, in-memory cache.",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
