chore: update deps

--- a/package.json
+++ b/package.json
@@ -5,30 +5,28 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "node_modules/.bin/tsc",
-    "types": "node_modules/.bin/tsc -d --declarationMap --emitDeclarationOnly",
+    "build": "tsc",
+    "types": "tsc -d --declarationMap --emitDeclarationOnly",
     "test": "nyc ts-mocha --timeout=3000 ./*.test.ts",
-    "lint": "node_modules/.bin/eslint *.js",
+    "lint": "npx eslint *.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "prepublishOnly": "npm run test && npm run lint",
     "prepare": "npm run build && npm run types"
   },
   "devDependencies": {
-    "@types/expect": "24.3.0",
-    "@types/mocha": "7.0.1",
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^8.0.3",
+    "chai": "^4.2.0",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
+    "mocha": "^8.2.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^13.3.0",
-    "sinon": "^6.0.0",
-    "ts-mocha": "6.0.0",
-    "tsc": "1.20150623.0",
-    "typescript": "3.7.5"
+    "nyc": "^15.1.0",
+    "sinon": "^9.2.1",
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.0.5"
   },
   "repository": {
     "type": "git",
