--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.1",
-    "ts-mocha": "^8.0.0",
-    "typescript": "^4.0.5"
+    "ts-mocha": "^8.0.0"
   },
   "repository": {
     "type": "git",
@@ -42,5 +41,8 @@
   "bugs": {
     "url": "https://github.com/kuper-adrian/clean-cache/issues"
   },
-  "homepage": "https://github.com/kuper-adrian/clean-cache#readme"
+  "homepage": "https://github.com/kuper-adrian/clean-cache#readme",
+  "dependencies": {
+    "typescript": "^4.0.5"
+  }
 }
