--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.1",
-    "ts-mocha": "^8.0.0"
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.0.5"
   },
   "repository": {
     "type": "git",
@@ -41,8 +42,5 @@
   "bugs": {
     "url": "https://github.com/kuper-adrian/clean-cache/issues"
   },
-  "homepage": "https://github.com/kuper-adrian/clean-cache#readme",
-  "dependencies": {
-    "typescript": "^4.0.5"
-  }
+  "homepage": "https://github.com/kuper-adrian/clean-cache#readme"
 }
